src/assets/sass/Home.scss
@use "./global";

.home {
  .main {
    width: min(90%, 1100px);
    margin: 0 auto;
    color: global.$primary-color;

    .showcase-container {
      display: flex;
      height: 85vh;

      .showcase-content {
        background-color: global.$primary-color;
        color: global.$light-color;
        flex: 6;
        display: flex;
        justify-content: center;
        align-items: center;

        .content {
          padding: 3rem;
        }

        h1 {
          font-size: 57px;
          text-transform: uppercase;
          line-height: 3.6rem;
          margin-bottom: 4px;
        }

        p {
          text-transform: capitalize;
          font-size: 18px;
          margin-bottom: 2rem;
        }

        .btn-container {
          a {
            text-decoration: none;
          }
        }

        .btn-primary {
          @include global.btnPrimary(
            $bg: global.$light-color,
            $text: global.$primary-color
          );
          display: inline-flex;
          justify-content: center;
          align-items: center;
          margin-right: 1rem;
          margin-bottom: 5px;
          width: 200px;
        }

        .btn-outlined {
          @include global.btnOutlined($color: global.$light-color);
          display: inline-flex;
          justify-content: center;
          align-items: center;
          width: 200px;
        }
      }

      .showcase-img {
        flex: 5;
        background: url("../images/showcase.jpg") center/ cover no-repeat;
      }
    }
    .stats-container {
      display: flex;
      align-items: center;
      justify-content: space-between;
      margin: 80px 0;

      .heading {
        text-transform: uppercase;
        font-size: 30px;
        font-weight: 500;
        max-width: 60%;
      }

      .stats {
        display: flex;
        max-width: 40%;
        margin-right: -50px;

        .stat {
          max-width: 120px;
          margin: 8px;

          .title {
            font-size: 28px;
            font-weight: bold;
            margin-bottom: 5px;
          }

          .desc {
            font-size: 18px;
            font-weight: 500;
          }
        }
      }
    }

    .query-container {
      display: flex;
      justify-content: space-between;

      .img-container {
        height: 320px;
        width: 465px;
        position: relative;

        .img {
          background: url("../images/about.jpg") center/cover;
          height: 100%;
          width: 100%;
        }

        &::before {
          content: "";
          background-color: global.$primary-color;
          position: absolute;
          height: 320px;
          width: 465px;
          top: -2rem;
          right: -2rem;
          z-index: -1;
        }
      }

      .desc-container {
        max-width: 520px;

        .title {
          font-size: 30px;
          font-weight: 500;
          text-transform: uppercase;
        }

        .desc {
          font-size: 18px;
          margin-top: 8px;
          line-height: 1.5;
        }

        .btn-primary {
          @include global.btnPrimary;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          margin-top: 12px;
        }
      }
    }

    .review-container {
      margin: 80px 0;

      .head {
        display: flex;
        justify-content: space-between;
        margin-bottom: 30px;

        .title {
          font-size: 30px;
          font-weight: 500;
          text-transform: uppercase;
        }

        .btn-primary {
          @include global.btnPrimary;
        }
      }

      .cards {
        display: flex;
        justify-content: space-between;

        .card {
          max-width: 300px;
          margin-right: 5px;
          background-color: #fff;
          text-align: center;
          padding: 1.5rem;
          transition: 0.2s ease-in;

          .quote {
            opacity: 0.5;
          }

          p {
            line-height: 1.4;
          }

          .author {
            font-size: 18px;
            font-weight: 600;
            text-transform: capitalize;
          }

          &:hover {
            cursor: pointer;
            box-shadow: 0px 3px 10px rgba($color: #000000, $alpha: 0.1);
          }
        }
      }
    }
    @media (max-width: 800px) {
      .showcase-content {
        .content {
          padding: 2rem !important;
        }

        h1 {
          font-size: 40px !important;
          line-height: 1.2 !important;
        }

        p {
          font-size: 16px !important;
        }

        .btn-primary {
          margin-right: 0 !important;
          margin-bottom: 8px !important;
          width: 100% !important;
        }

        .btn-outlined {
          width: 100% !important;
        }
      }
      .stats-container {
        flex-direction: column;

        .heading {
          text-align: center;
          font-size: 24px;
          max-width: 100% !important;
        }

        .stats {
          max-width: 100%;
          margin-top: 1rem;
          flex-wrap: wrap;
          margin-right: 0px;

          .stat {
            margin: 8px;

            .title {
              font-size: 24px;
            }

            .desc {
              font-size: 16px;
            }
          }
        }
      }

      .query-container {
        flex-direction: column;
        align-items: center;

        .img-container {
          height: 300px;
          width: 300px;
          border-radius: 50%;
          overflow: hidden;

          &::before {
            content: none;
          }
        }

        .desc-container {
          max-width: 100%;
          text-align: center;
          margin-top: 1rem;

          .title {
            font-size: 24px;
          }

          .desc {
            font-size: 16px;
            margin: 1rem 0;
          }
        }
      }

      .review-container {
        .head {
          align-items: center;
          text-align: center;

          .title {
            font-size: 24px;
          }
        }
      }
    }

    @media (max-width: 650px) {
      .stats-container {
        .heading {
          font-size: 20px;
        }

        .stats {
          justify-content: center;
          text-align: center;

          .stat {
            margin: 8px;

            .title {
              font-size: 18px;
            }

            .desc {
              font-size: 16px;
            }
          }
        }
      }
      .review-container {
        .head {
          justify-content: center;
        }
        .btn-primary {
          display: none;
        }
        .cards {
          flex-direction: column;

          .card {
            max-width: 100%;
            margin-right: 0;
            margin-bottom: 1rem;

            .quote {
              opacity: 0.5;
            }

            p {
              line-height: 1.4;
            }

            .author {
              font-size: 18px;
              font-weight: 600;
              text-transform: capitalize;
            }

            &:hover {
              cursor: pointer;
              box-shadow: 0px 3px 10px rgba($color: #000000, $alpha: 0.1);
            }
          }
        }
      }
    }

    @media (max-width: 500px) {
      .showcase-container {
        position: relative;
        .showcase-content {
          background-color: rgba($color: global.$primary-color, $alpha: 0.6);

          .content {
            padding: 3rem 2rem !important;
            text-align: center;
          }
        }

        .showcase-img {
          width: 90%;
          height: 90%;
          position: absolute;
          z-index: -99 !important;
          top: 0;
          left: 0;
        }
      }
    }
  }
}

